[gd_scene load_steps=12 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/Polygon.png" type="Texture" id=2]
[ext_resource path="res://assets/EmptyButton.png" type="Texture" id=3]
[ext_resource path="res://assets/Optimism.png" type="Texture" id=4]
[ext_resource path="res://assets/Arbitrum.png" type="Texture" id=5]
[ext_resource path="res://assets/Avalanche.png" type="Texture" id=6]
[ext_resource path="res://assets/Ethereum.png" type="Texture" id=7]
[ext_resource path="res://AddTokenSlider.gd" type="Script" id=8]
[ext_resource path="res://MonitoredTokenList.tscn" type="PackedScene" id=9]
[ext_resource path="res://ChronomancerLogo.tscn" type="PackedScene" id=10]
[ext_resource path="res://SentTransactionsList.tscn" type="PackedScene" id=11]

[node name="Coordinator" type="Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Main" type="Control" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="Main"]
visible = false
margin_left = 18.0
margin_top = 15.0
margin_right = 70.0
margin_bottom = 29.0
text = "Address"

[node name="Address" type="LineEdit" parent="Main"]
visible = false
margin_left = 7.0
margin_top = 36.0
margin_right = 831.0
margin_bottom = 64.0
editable = false

[node name="GasBalances" type="Control" parent="Main"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="EthSepoliaLabel" type="Label" parent="Main/GasBalances"]
margin_left = 18.0
margin_top = 85.0
margin_right = 96.0
margin_bottom = 116.0
text = "ETH Sepolia Balance
"

[node name="Ethereum Sepolia" type="Label" parent="Main/GasBalances"]
margin_left = 18.0
margin_top = 111.0
margin_right = 70.0
margin_bottom = 142.0
text = "0"

[node name="ArbSepoliaLabel" type="Label" parent="Main/GasBalances"]
margin_left = 18.0
margin_top = 131.0
margin_right = 146.0
margin_bottom = 162.0
text = "ARB Sepolia Balance
"

[node name="Arbitrum Sepolia" type="Label" parent="Main/GasBalances"]
margin_left = 18.0
margin_top = 157.0
margin_right = 70.0
margin_bottom = 188.0
text = "0"

[node name="OpSepoliaLabel" type="Label" parent="Main/GasBalances"]
margin_left = 16.0
margin_top = 180.0
margin_right = 146.0
margin_bottom = 211.0
text = "OP Sepolia Balance
"

[node name="Optimism Sepolia" type="Label" parent="Main/GasBalances"]
margin_left = 16.0
margin_top = 206.0
margin_right = 68.0
margin_bottom = 237.0
text = "0"

[node name="HTTP" type="Control" parent="Main"]
margin_right = 40.0
margin_bottom = 40.0

[node name="LoadSavedTokens" type="Button" parent="Main"]
margin_left = 254.0
margin_top = 49.0
margin_right = 386.0
margin_bottom = 69.0
mouse_default_cursor_shape = 2
text = "Load Saved Tokens"

[node name="MonitoredTokenList" parent="Main" instance=ExtResource( 9 )]

[node name="Overlay" type="ColorRect" parent="Main"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1124.0
margin_bottom = 636.0
color = Color( 0, 0, 0, 0.392157 )

[node name="AddToken" type="Button" parent="Main"]
margin_left = 18.0
margin_top = 4.0
margin_right = 97.0
margin_bottom = 54.0
mouse_default_cursor_shape = 2
text = "Add Token"
script = ExtResource( 8 )

[node name="SlideTween" type="Tween" parent="Main/AddToken"]

[node name="NetworkButtons" type="Panel" parent="Main/AddToken"]
margin_left = -371.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 481.0

[node name="Frames" type="Control" parent="Main/AddToken/NetworkButtons"]
margin_right = 40.0
margin_bottom = 40.0

[node name="EmptyFrame" type="TextureRect" parent="Main/AddToken/NetworkButtons/Frames"]
margin_right = 100.0
margin_bottom = 100.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="EmptyFrame2" type="TextureRect" parent="Main/AddToken/NetworkButtons/Frames"]
margin_left = 70.0
margin_right = 170.0
margin_bottom = 100.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="EmptyFrame3" type="TextureRect" parent="Main/AddToken/NetworkButtons/Frames"]
margin_left = 140.0
margin_right = 240.0
margin_bottom = 100.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="EmptyFrame4" type="TextureRect" parent="Main/AddToken/NetworkButtons/Frames"]
margin_left = 210.0
margin_right = 310.0
margin_bottom = 100.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="EmptyFrame5" type="TextureRect" parent="Main/AddToken/NetworkButtons/Frames"]
margin_left = 280.0
margin_right = 380.0
margin_bottom = 100.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="EmptyFrame6" type="TextureRect" parent="Main/AddToken/NetworkButtons/Frames"]
margin_top = 70.0
margin_right = 100.0
margin_bottom = 170.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="EmptyFrame7" type="TextureRect" parent="Main/AddToken/NetworkButtons/Frames"]
margin_left = 70.0
margin_top = 70.0
margin_right = 170.0
margin_bottom = 170.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="EmptyFrame8" type="TextureRect" parent="Main/AddToken/NetworkButtons/Frames"]
margin_left = 140.0
margin_top = 70.0
margin_right = 240.0
margin_bottom = 170.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="EmptyFrame9" type="TextureRect" parent="Main/AddToken/NetworkButtons/Frames"]
margin_left = 210.0
margin_top = 70.0
margin_right = 310.0
margin_bottom = 170.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="EmptyFrame10" type="TextureRect" parent="Main/AddToken/NetworkButtons/Frames"]
margin_left = 280.0
margin_top = 70.0
margin_right = 380.0
margin_bottom = 170.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Ethereum Sepolia" type="TextureButton" parent="Main/AddToken/NetworkButtons"]
margin_left = 15.0
margin_top = 7.0
margin_right = 55.0
margin_bottom = 74.0
rect_scale = Vector2( 1, 0.8 )
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )

[node name="Overlay" type="ColorRect" parent="Main/AddToken/NetworkButtons/Ethereum Sepolia"]
margin_left = -15.0
margin_top = -6.0
margin_right = 85.0
margin_bottom = 112.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 1
color = Color( 1, 1, 1, 0 )

[node name="Arbitrum Sepolia" type="TextureButton" parent="Main/AddToken/NetworkButtons"]
margin_left = 80.0
margin_top = 6.0
margin_right = 130.0
margin_bottom = 61.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )

[node name="Overlay" type="ColorRect" parent="Main/AddToken/NetworkButtons/Arbitrum Sepolia"]
margin_left = -10.0
margin_top = -4.0
margin_right = 87.0
margin_bottom = 93.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 1
color = Color( 1, 1, 1, 0 )

[node name="Optimism Sepolia" type="TextureButton" parent="Main/AddToken/NetworkButtons"]
margin_left = 150.0
margin_top = 9.0
margin_right = 200.0
margin_bottom = 64.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )

[node name="Overlay" type="ColorRect" parent="Main/AddToken/NetworkButtons/Optimism Sepolia"]
margin_left = -10.0
margin_top = -9.0
margin_right = 90.0
margin_bottom = 91.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 1
color = Color( 1, 1, 1, 0 )

[node name="Avalanche Fuji" type="TextureButton" parent="Main/AddToken/NetworkButtons"]
visible = false
margin_left = 220.0
margin_top = 9.0
margin_right = 270.0
margin_bottom = 64.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )

[node name="Overlay" type="ColorRect" parent="Main/AddToken/NetworkButtons/Avalanche Fuji"]
margin_left = -10.0
margin_top = -9.0
margin_right = 90.0
margin_bottom = 91.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 1
color = Color( 1, 1, 1, 0 )

[node name="Polygon Mumbai" type="TextureButton" parent="Main/AddToken/NetworkButtons"]
visible = false
margin_left = 290.0
margin_top = 10.0
margin_right = 340.0
margin_bottom = 65.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )

[node name="Overlay" type="ColorRect" parent="Main/AddToken/NetworkButtons/Polygon Mumbai"]
margin_left = -10.0
margin_top = -10.0
margin_right = 90.0
margin_bottom = 90.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 1
color = Color( 1, 1, 1, 0 )

[node name="Prompt" type="Label" parent="Main/AddToken"]
margin_left = -289.0
margin_top = 145.0
margin_right = -67.0
margin_bottom = 261.0
text = "Choose a network to serve and
provide your token's local address.
You must have a balance to provide
fast transfers."

[node name="AddressEntry" type="LineEdit" parent="Main/AddToken"]
margin_left = -345.0
margin_top = 276.0
margin_right = -34.0
margin_bottom = 300.0

[node name="NetworkLabel" type="Label" parent="Main/AddToken"]
margin_left = -364.0
margin_top = 230.0
margin_right = -21.0
margin_bottom = 244.0
align = 1

[node name="GasBalance" type="Label" parent="Main/AddToken"]
margin_left = -364.0
margin_top = 250.0
margin_right = -21.0
margin_bottom = 264.0
align = 1

[node name="TokenLabel" type="Label" parent="Main/AddToken"]
margin_left = -366.0
margin_top = 319.0
margin_right = -20.0
margin_bottom = 333.0
align = 1

[node name="TokenBalance" type="Label" parent="Main/AddToken"]
margin_left = -366.0
margin_top = 342.0
margin_right = -20.0
margin_bottom = 356.0
align = 1

[node name="Confirm" type="Button" parent="Main/AddToken"]
margin_left = -243.0
margin_top = 430.0
margin_right = -127.0
margin_bottom = 450.0
mouse_default_cursor_shape = 2
text = "Confirm Choices"

[node name="AddNetwork" type="Button" parent="Main/AddToken"]
visible = false
margin_left = -231.0
margin_top = 388.0
margin_right = -137.0
margin_bottom = 408.0
mouse_default_cursor_shape = 2
text = "Add Network"

[node name="ScanLink" type="RichTextLabel" parent="Main/AddToken"]
visible = false
margin_left = -288.0
margin_top = 362.0
margin_right = -79.0
margin_bottom = 377.0
bbcode_enabled = true
bbcode_text = "[center][u]Scanner Link[/u][/center]"
text = "Scanner Link"

[node name="ScanLink" type="TextureButton" parent="Main/AddToken/ScanLink"]
margin_left = 64.0
margin_right = 143.0
margin_bottom = 15.0
mouse_default_cursor_shape = 2

[node name="FinalConfirm" type="Label" parent="Main/AddToken"]
margin_left = -357.0
margin_top = 147.0
margin_right = -12.0
margin_bottom = 382.0

[node name="Control" type="Control" parent="Main"]
margin_left = 448.0
margin_top = 75.0
margin_right = 488.0
margin_bottom = 115.0

[node name="SlideTween" type="Tween" parent="Main/Control"]

[node name="NetworkButtons" type="Panel" parent="Main/Control"]
margin_left = 560.0
margin_top = 42.0
margin_right = 933.0
margin_bottom = 525.0

[node name="Settings" type="Button" parent="Main"]
margin_left = 929.0
margin_top = 548.0
margin_right = 1008.0
margin_bottom = 598.0
mouse_default_cursor_shape = 2
text = "Settings"

[node name="SentTransactionsList" parent="Main" instance=ExtResource( 11 )]

[node name="ChronomancerLogo" parent="." instance=ExtResource( 10 )]
